feat: add Docker setup and LinkedIn integration
- Add Dockerfile and docker-compose.yml for containerized deployment
- Implement environment variables with .env file support
- Add LinkedIn profile link in footer for professional networking
- Update app.py to use environment variables for configuration
- Improve .gitignore to exclude build/, .venv/, and other generated files
- Clean up contact section to focus on direct communication
- Add .env.example for easy environment setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
-# Virtual environment
-.venv/
-venv/
-env/
+# Environment variables
+.env
 
-# Python cache
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.venv/
 
-# Flask
-instance/
-.webassets-cache
+# Build directories
+build/
+dist/
+*.egg-info/
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
 # OS
 .DS_Store
 Thumbs.db
-
-# Build directory (will be generated)
-build/
