--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Test Docker container
       run: |
-        docker run -d --name test-container -p 5000:5000 mentor-site:${{ github.sha }
+        docker run -d --name test-container -p 5000:5000 mentor-site:${{ github.sha }}
         sleep 10
         curl -f http://localhost:5000/ || exit 1
         docker stop test-container
