--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest --cov=app --cov-report=xml --cov-report=term-missing
+        PYTHONPATH=. pytest --cov=app --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
