feat: remove newsletter functionality and simplify codebase
- Remove GDPR-compliant newsletter signup system
- Remove Listmonk integration and email service dependencies
- Remove newsletter forms, popups, and related CSS/JS
- Clean up requirements.txt (remove Flask-SQLAlchemy, requests)
- Simplify app.py to focus on core contact functionality
- Update templates to remove newsletter sections
- Clean up navigation and hero section
- Remove newsletter API endpoint and validation functions

This reverts the site to a clean, simple mentoring platform focused on core business.

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,6 @@ dist/
 .DS_Store
 Thumbs.db
 
-# Testing and coverage
-.coverage
-.coverage.*
-htmlcov/
-.pytest_cache/
+# Newsletter and lead data
+newsletter_subscriptions.json
+leads.json
