fix(footer): drop email contact link in favor of LinkedIn

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ SITE_EMAIL=
 SITE_CALENDLY_LINK=
 SITE_META_DESCRIPTION=
 SITE_FOCUS_AREAS=
+ASSET_VERSION=
 
 # Deployment Configuration
 BASE_PATH=
