Add Plausible analytics support

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ SITE_URL=
 SITE_META_DESCRIPTION=
 SITE_FOCUS_AREAS=
 ASSET_VERSION=
+PLAUSIBLE_SCRIPT_URL=
 
 # Deployment Configuration
 BASE_PATH=
