--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   mentor-site:
-    build: .
+    build:
+      context: .
+      args:
+        BASE_PATH: ${BASE_PATH:-/mentor-site}
     container_name: mentor-site-prod
     ports:
       # Map host port 3000 to container port 80 (nginx)
@@ -19,6 +22,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        BASE_PATH: ${BASE_PATH:-/mentor-site}
     container_name: mentor-site-authoring
     command: python author_app.py
     ports:
@@ -28,6 +33,7 @@ services:
     environment:
       - AUTHORING_CONTENT_DIR=/app/content/posts
       - AUTHORING_SECRET_KEY=authoring-dev-secret
+      - BASE_PATH=${BASE_PATH:-/mentor-site}
     restart: unless-stopped
     profiles:
       - authoring
@@ -37,13 +43,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        BASE_PATH: ${BASE_PATH:-/mentor-site}
     container_name: mentor-site-dev
     ports:
-      - "3001:5000"  # Map host 3001 to Flask dev server
+      - "5000:5000"  # Map host 5000 to Flask dev server
     command: python app.py
     environment:
       - FLASK_ENV=development
       - FLASK_DEBUG=1
+      - BASE_PATH=${BASE_PATH:-/}
+    volumes:
+      - ./:/app
     profiles:
       - dev  # Only start with --profile dev
     restart: "no"
@@ -61,6 +72,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        BASE_PATH: ${BASE_PATH:-/mentor-site}
     command: pytest
     volumes:
       - ./:/app
