feat: revamp tutoring flow and redesign site

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -22,6 +22,13 @@ COPY . .
 ENV FLASK_ENV=development
 ENV FLASK_DEBUG=1
 ENV BASE_PATH=${BASE_PATH}
+ENV SITE_CALENDLY_LINK=https://calendly.com/toucan-sg/consulting-link
+ENV STRIPE_SECRET_KEY=
+ENV STRIPE_PUBLISHABLE_KEY=
+ENV STRIPE_PRICE_ID=
+ENV STRIPE_SUCCESS_URL=
+ENV STRIPE_CANCEL_URL=
+ENV STRIPE_ENDPOINT_SECRET=
 
 # Expose port 5000
 EXPOSE 5000
