--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,13 @@ services:
       - "3000:80"
     environment:
       - NODE_ENV=production
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
+      - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
+      - STRIPE_PRICE_ID=${STRIPE_PRICE_ID:-}
+      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL:-}
+      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL:-}
+      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
+      - SITE_CALENDLY_LINK=${SITE_CALENDLY_LINK:-https://calendly.com/toucan-sg/consulting-link}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/"]
@@ -34,6 +41,8 @@ services:
       - AUTHORING_CONTENT_DIR=/app/content/posts
       - AUTHORING_SECRET_KEY=authoring-dev-secret
       - BASE_PATH=${BASE_PATH:-/mentor-site}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
+      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
     restart: unless-stopped
     profiles:
       - authoring
@@ -53,6 +62,13 @@ services:
       - FLASK_ENV=development
       - FLASK_DEBUG=1
       - BASE_PATH=${BASE_PATH:-/}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
+      - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
+      - STRIPE_PRICE_ID=${STRIPE_PRICE_ID:-}
+      - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL:-}
+      - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL:-}
+      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
+      - SITE_CALENDLY_LINK=${SITE_CALENDLY_LINK:-https://calendly.com/toucan-sg/consulting-link}
     volumes:
       - ./:/app
     profiles:
@@ -82,6 +98,8 @@ services:
     working_dir: /app
     environment:
       - PYTHONDONTWRITEBYTECODE=1
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
+      - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
     restart: "no"
 
 networks:
