--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,17 @@ SITE_META_DESCRIPTION=
 SITE_FOCUS_AREAS=
 ASSET_VERSION=
 PLAUSIBLE_SCRIPT_URL=
+PLAUSIBLE_DOMAIN=
+SITE_SOCIAL_IMAGE=
+
+# Stripe / Payments
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_PRICE_ID=
+STRIPE_PAYMENT_LINK=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+STRIPE_ENDPOINT_SECRET=
 
 # Deployment Configuration
 BASE_PATH=
