--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_PRICE_ID=${STRIPE_PRICE_ID:-}
+      - STRIPE_PAYMENT_LINK=${STRIPE_PAYMENT_LINK:-}
       - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL:-}
       - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL:-}
       - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
@@ -61,17 +62,19 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_DEBUG=1
-      - ENV_FILE=.env.dev
       - BASE_PATH=${BASE_PATH:-/}
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_PRICE_ID=${STRIPE_PRICE_ID:-}
+      - STRIPE_PAYMENT_LINK=${STRIPE_PAYMENT_LINK:-}
       - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL:-}
       - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL:-}
       - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET:-}
       - SITE_CALENDLY_LINK=${SITE_CALENDLY_LINK:-https://calendly.com/toucan-sg/consulting-link}
     volumes:
       - ./:/app
+    env_file:
+      - .env.dev
     profiles:
       - dev  # Only start with --profile dev
     restart: "no"
@@ -84,6 +87,8 @@ services:
             - .git
             - __pycache__
             - node_modules
+        - action: rebuild
+          path: .env.dev
 
   tests:
     build:
