--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ SITE_SOCIAL_IMAGE=
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_PRICE_ID=
-STRIPE_PAYMENT_LINK=https://book.stripe.com/test_8x214ndsE7QwfmC9JRbV602
+STRIPE_PAYMENT_LINK=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
 STRIPE_ENDPOINT_SECRET=
