--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ PORT=
 SITE_NAME=
 SITE_TAGLINE=
 SITE_EMAIL=
-SITE_CALENDLY_LINK=
-SITE_URL=
+SITE_CALENDLY_LINK=https://calendly.com/toucan-sg/consulting-link
+SITE_URL=https://toucan.ee
 SITE_META_DESCRIPTION=
 SITE_FOCUS_AREAS=
 ASSET_VERSION=
@@ -21,8 +21,8 @@ STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_PRICE_ID=
 STRIPE_PAYMENT_LINK=
-STRIPE_SUCCESS_URL=
-STRIPE_CANCEL_URL=
+STRIPE_SUCCESS_URL=https://toucan.ee/schedule/?session_id={CHECKOUT_SESSION_ID}
+STRIPE_CANCEL_URL=https://toucan.ee/schedule/?preview=1
 STRIPE_ENDPOINT_SECRET=
 
 # Deployment Configuration
