chore: add env example template

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,46 @@
+# Flask Configuration
+FLASK_DEBUG=
+HOST=
+PORT=
+ENV_FILE=
+APP_ENV=
 
+# Site Configuration
+SITE_NAME=
+SITE_TAGLINE=
+SITE_EMAIL=
+SITE_CALENDLY_LINK=
+SITE_URL=
+SITE_META_DESCRIPTION=
+SITE_FOCUS_AREAS=
+ASSET_VERSION=
+PLAUSIBLE_SCRIPT_URL=
+PLAUSIBLE_DOMAIN=
+SITE_SOCIAL_IMAGE=
+
+# Stripe / Payments
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_PRICE_ID=
+STRIPE_PAYMENT_LINK=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+STRIPE_ENDPOINT_SECRET=
+
+# Database
+DATABASE=
+DATABASE_PATH=
+
+# Deployment Configuration
+BASE_PATH=
+GITHUB_PAGES_BASE_PATH=
+BACKEND_BASE_URL=
+
+# Authoring App
+AUTHORING_HOST=
+AUTHORING_PORT=
+AUTHORING_DEBUG=
+AUTHORING_SECRET_KEY=
+AUTHORING_CONTENT_DIR=
+AUTHORING_MEDIA_DIR=
+MEDIA_URL_PREFIX=
