--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ services:
       context: .
       args:
         BASE_PATH: ${BASE_PATH:-/}
+        STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
+        STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY:-}
+        STRIPE_PRICE_ID: ${STRIPE_PRICE_ID:-}
+        STRIPE_PAYMENT_LINK: ${STRIPE_PAYMENT_LINK:-}
+        STRIPE_SUCCESS_URL: ${STRIPE_SUCCESS_URL:-}
+        STRIPE_CANCEL_URL: ${STRIPE_CANCEL_URL:-}
+        STRIPE_ENDPOINT_SECRET: ${STRIPE_ENDPOINT_SECRET:-}
     container_name: mentor-site-prod
     ports:
       # Map host port 3000 to container port 80 (nginx)
