--- a/.env.dev
+++ b/.env.dev
@@ -10,7 +10,7 @@ SITE_NAME=
 SITE_TAGLINE=
 SITE_EMAIL=
 SITE_CALENDLY_LINK=
-SITE_URL=https://toucan.ee
+SITE_URL=
 SITE_META_DESCRIPTION=
 SITE_FOCUS_AREAS=
 ASSET_VERSION=
@@ -22,8 +22,8 @@ SITE_SOCIAL_IMAGE=
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_PRICE_ID=
-STRIPE_PAYMENT_LINK=https://book.stripe.com/00w28kbMX8C15Q43qj4F203
-STRIPE_SUCCESS_URL=https://toucan.ee/schedule/?session_id={CHECKOUT_SESSION_ID}
+STRIPE_PAYMENT_LINK=https://book.stripe.com/test_8x214ndsE7QwfmC9JRbV602
+STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
 STRIPE_ENDPOINT_SECRET=
 
@@ -35,7 +35,7 @@ DATABASE_PATH=
 BASE_PATH=
 GITHUB_PAGES_BASE_PATH=
 BACKEND_BASE_URL=
-MENTOR_SITE_PORT=3000
+MENTOR_SITE_PORT=5000
 
 # Authoring App
 AUTHORING_HOST=
